add speakers multiple templates and routing

--- a/ngTraining/training.html
+++ b/ngTraining/training.html
@@ -1,9 +1,4 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body ng-app="trainingApp" ng-controller="trainingController">
+﻿<div>
     <h1>Trainings</h1>
     <div>
         <form name="createTraining">
@@ -20,8 +15,5 @@
             </li>
         </ul>
     </div>
-</body>
-</html>
-<script src="Scripts/angular.js"></script>
-<script src="training.js"></script>
+</div>
 
