--- a/ngTraining/training.html
+++ b/ngTraining/training.html
@@ -11,7 +11,7 @@
     <div>
         <ul ng-repeat="training in trainings |orderBy:'Name'">
             <li>
-                {{training.Name}}
+                <list-item name="{{training.name}}"></list-item>                  
             </li>
         </ul>
     </div>
